修复背景图层无效问题，新增demo

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>yview</title>
+    <title>vue-alert-loading</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/vue-alert-loading.js"></script>
+    <script src="./dist/vue-alert-loading.js"></script>
   </body>
 </html>
